--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="container mt-5">
-        <h1 class="text-center">Area Calculator</h1>
-        <button class="btn btn-primary btn-block" onclick="calculatearea()">Calculate Area</button>
+        <h1 class="text-center">Perimeter Calculator</h1>
+        <button class="btn btn-primary btn-block" onclick="calculatearea()">Calculate Perimeter</button>
     </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
